<?xml version="1.0"?>
<package format="2">
  <name>networktables</name>
  <version>3.1.7</version>
  <description>Packages networktables as a catkin package. (note that although this package is MIT licensed, the underlying library has its own terms)</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="matthew@mm12.xyz">Matthew Mirvish</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <url type="repository">https://github.com/mincrmatt12/catkin-networktables</url>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
